# minifilter-backup-before-delete

./: README.md  build.nims  build.sh
.github/workflows/: build.yml  cmake-single-platform.yml
app/: CMakeLists.txt  README.md
app/.ci/: dev_build_msys_local.sh
app/clients/: BackBlazeClient.cpp  BackBlazeClient.h  CMakeLists.txt
app/cmake/: build_nim.nims  build_nim.sh
app/ctl/: CMakeLists.txt  build.sh  subconsciousctl.nim
app/database/: CMakeLists.txt  SqliteDb.cpp  SqliteDb.h  test_db.cpp
app/src/: ShieldClient.cpp  ShieldClient.h  main.cpp
app/tests/: CMakeLists.txt  test_live.nim  test_sha1.cpp
app/utils/: CMakeLists.txt  utility.cpp  utility.h
cmake/: uninstall_minifilter.ps1.in
minifilter/: BackupOnDeleteShield.inf.in  CMakeLists.txt
minifilter/.ci/: dev_build_msys_local.sh
minifilter/data/: SubconsciousCert.cer  SubconsciousCert.pfx  SubconsciousCert.pvk  SubconsciousCert.spc
minifilter/packaging/windows/: installer-script.nsis.in
minifilter/src/: communication.cpp  communication.h  files.cpp  files.h  globals.cpp  globals.h  main.cpp
tests/: CMakeLists.txt  create_and_delete.ps1  test_rename.cpp
